<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GEMs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_arduino">Arduino</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redButtonText">Red</string>
    <string name="yellowButtonText">Yellow</string>
    <string name="greenButtonText">Green</string>
    <string name="lightLabel">Light</string>
    <string name="motionLabel">Motion</string>
    <string name="buttonLabel">Button</string>
    <string name="statusLabel">Status</string>
    <string name="myfridgeButtonlabel">My Fridge</string>
    <string name="tipsButtonLabel">Tips</string>
    <string name="gameButtonLabel">Game</string>
    <string name="settingsButtonLabel">Settings</string>
    <string name="demoButtonLabel">Demo</string>
    <string name="title_activity_my_fridge">My Fridge</string>
    <string name="action_settings">Logout</string>
    <string name="defaultLabel">Default</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="itemName">Change Name</string>
    <string name="shelfLife">Shelf Life</string>
    <string name="quantity">Quantity</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_demo">DemoActivity</string>
</resources>
