<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.unccinteractionstudio.gems.gems.ArduinoActivity">

    <TextView
        android:id="@+id/redTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ffff0000"
        android:text="@string/redButtonText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/redToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/redTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/yellowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/redToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#ffffff00"
        android:text="@string/yellowButtonText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/yellowToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yellowTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/greenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yellowToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#ff00ff00"
        android:text="@string/greenButtonText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/greenToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greenTextView"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Status"
        android:id="@+id/statusbutton"
        android:layout_below="@+id/greenToggleButton"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/statusbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/msgJonduino"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignTop="@+id/scrollView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </ScrollView>

</RelativeLayout>
